[package]
name = "desmonic_script"
description = "Successor to radian628/desmoscript. Functional (hopefully) on the latest version of desmos. "
version = "0.1.0"
edition = "2021"
repository = "https://github.com/CATboardBETA/DesmonicScript.git"
license = "GPL-3"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features= ["json"] }
chumsky = "0.9"
ariadne = "0.4"
lazy_static = "1.4.0"
serde = "1.0.195"
rand = "0.8.5"
log = "0.4.20"